fix: bookmark button on smaller screens

--- a/src/pages/ArtPiece/ArtPiece.scss
+++ b/src/pages/ArtPiece/ArtPiece.scss
@@ -44,6 +44,14 @@
       gap: 40px;
     }
 
+    &-image {
+      @include mixins.flex-center;
+    }
+
+    &-bookmark {
+      right: 7%;
+    }
+
     &-image img {
       width: 85%;
     }
